<resources>
    <string name="app_name">Ứng Dụng Gia Sư</string>
    <string name="title_activity_man_hinh_dau_tien">ManHinhDauTien</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Võ Thị Đức Hạnh</string>
    <string name="nav_header_subtitle">vohanh48@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_dangxuat">Đăng xuất</string>
    <string name="tooltip_cmnd_truoc">Mặt trước</string>
    <string name="tooltip_cmnd_sau">Mặt sau</string>
    <string name="tooltip_bangcapsv_truoc">Mặt trước</string>
    <string name="tooltip_bangcapsv_sau">Mặt sau</string>
    <string-array name="trinhdogs">
        <item>Sinh viên</item>
        <item>Đã tốt nghiệp</item>
        <item>Giảng viên</item>
    </string-array>
    <string-array name="mondaygs">
        <item>Toán</item>
        <item>Lý</item>
        <item>Hóa</item>
        <item>Tiếng Anh</item>
    </string-array>

    <string name="menu_trangchu">Trang chủ</string>
    <string name="menu_dslophoc">Danh sách lớp học</string>
    <string name="menu_lopchonhan">Lớp chờ nhận</string>
    <string name="menu_lichsulophoc">Lịch sử lớp học</string>
    <string name="menu_lichnghi">Lịch nghỉ</string>
    <string name="menu_lopcangiasu">Lớp cần gia sư</string>
    <string name="menu_thoikhoabieu">Thời khóa biểu</string>
</resources>
