<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trangchu"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_trangchu" />
        <item
            android:id="@+id/nav_dslophoc"
            android:icon="@drawable/ic_featured_play_list_black_24dp"
            android:title="@string/menu_dslophoc" />
        <item
            android:id="@+id/nav_lopchonhan"
            android:icon="@drawable/ic_class_black_24dp"
            android:title="@string/menu_lopchonhan" />
        <item
            android:id="@+id/nav_lichsulophoc"
            android:icon="@drawable/ic_class_black_24dp"
            android:title="@string/menu_lichsulophoc" />
        <item
            android:id="@+id/nav_lichnghi"
            android:icon="@drawable/ic_today_black_24dp"
            android:title="@string/menu_lichnghi" />
        <item
            android:id="@+id/nav_lopcangiasu"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_lopcangiasu" />
        <item android:id="@+id/nav_thoikhoabieu"
            android:icon="@drawable/ic_today_black_24dp"
            android:title="@string/menu_thoikhoabieu"/>
    </group>

<!--    <item android:title="Communicate">-->
<!--        <menu>-->

<!--        </menu>-->
<!--    </item>-->

</menu>
